# MA-kerfd

./: .gitignore  master.pdf.REMOVED.git-id  master.tex
application/english/: cv.tex
application/german/: cv_german.tex  letter.tex  letter_german.tex
custom/: .Xauthority  .Xresources  .bash_profile  .bashrc  .clang-format  .nvidia-settings-rc.samsung  .viminfo  .vimrc  bash_profile  compton.conf  config  known_hosts  new.xorg.conf  packagelist.txt  pckglst.txt  rc.lua  theme.lua  xinitrc  xorg.conf
custom/vim/: .netrwhist
custom/xorg.conf.d/: 20-keyboard.conf
customs/: .Xresources
customs/brain/: .bash_profile  .vimrc
customs/client/: .bashrc  .viminfo  .vimrc
gnuplot/: xsections.gplt
gnuplot/plotscripts/: 1D.sh  animation.gplt  compare1D2D.gplt  octave.m  onedimensional.gplt  onedtwodcompare.gplt  plots.sh  script_all.sh  transpose.sh  twodmatrixplots.gplt  update_diagnostics.sh  xsections.gplt
gnuplot/xscts/: init.cpp
images/: 30657.allfigs.00900001.png.REMOVED.git-id  30797.allfigs.00024001.png.REMOVED.git-id  30797.allfigs.00030001.png.REMOVED.git-id  30797.allfigs.00048001.png.REMOVED.git-id  30797.allfigs.00072001.png.REMOVED.git-id  31116.allfigs.00001469.png.REMOVED.git-id  31116.allfigs.00004038.png.REMOVED.git-id  31116.allfigs.00016149.png.REMOVED.git-id  31116.allfigs.00016516.png.REMOVED.git-id  31296.allfigs.00106690.png.REMOVED.git-id  31297.allfigs.00082534.png.REMOVED.git-id  31312.allfigs.00000019.png.REMOVED.git-id  31332.allfigs.00078508.png.REMOVED.git-id  31533.allfigs.00000734.png.REMOVED.git-id  31533.allfigs.00001468.png.REMOVED.git-id  31533.allfigs.00001835.png.REMOVED.git-id  31533.allfigs.00002569.png.REMOVED.git-id  31533.allfigs.00002936.png.REMOVED.git-id  31533.allfigs.00003303.png.REMOVED.git-id  31533.allfigs.00124780.png.REMOVED.git-id  31947.allfigs.00032757.png.REMOVED.git-id  31947.allfigs.00032940.png.REMOVED.git-id  31947.allfigs.00033123.png.REMOVED.git-id  31947.allfigs.00033489.png.REMOVED.git-id  31947.allfigs.00033672.png.REMOVED.git-id  31947.allfigs.00036417.png.REMOVED.git-id  compare1D-31872.2D-31947.png.REMOVED.git-id  dens1D-31521.130000_2D-31533.00124780.png.REMOVED.git-id  dens1D-31872.32975_2D-31947.00032940.png.REMOVED.git-id  dens1D-31872.33150_2D-31947.00033123.png.REMOVED.git-id  dens1D-31872.33525_2D-31947.00033489.png.REMOVED.git-id  dens1D-31872.33700_2D-31947.00033672.png.REMOVED.git-id  densities-31496.gif.REMOVED.git-id  densities-31533.gif.REMOVED.git-id  densities-31872.gif.REMOVED.git-id  densities-31947.gif.REMOVED.git-id  densities1D-31872.gif.REMOVED.git-id  densities2D-31947-p1.gif.REMOVED.git-id  densities2D-31947-p2.gif.REMOVED.git-id  densities2D-31947.gif.REMOVED.git-id  (+14 more)
images/31674/: compare1D-31872.2D-31674.png.REMOVED.git-id
images/31880/: compare1D-31872.2D-31880.png.REMOVED.git-id  densities2D-31880.gif.REMOVED.git-id  potential-31880.gif.REMOVED.git-id  vel1D-31872_2D-31880.png.REMOVED.git-id  velocities1D-31872.gif.REMOVED.git-id  velocities2D-31880.gif.REMOVED.git-id
images/31947/: 31947.allfigs.00036417.png.REMOVED.git-id  densities1D-31872.gif.REMOVED.git-id  densities2D-31947.gif.REMOVED.git-id  vel1D-31872_2D-31947.png.REMOVED.git-id  velocities2D-31947.gif.REMOVED.git-id
images/31949/: 31949.allfigs.00000001.png.REMOVED.git-id  31949.allfigs.00002000.png.REMOVED.git-id  compare1D-31872.2D-31949.png.REMOVED.git-id  densities1D-31872.gif.REMOVED.git-id  densities2D-31949.gif.REMOVED.git-id  vel1D-31872_2D-31949.png.REMOVED.git-id  velocities1D-31872.gif.REMOVED.git-id  velocities2D-31949.gif.REMOVED.git-id
images/32060/: 32060.allfigs.00066500.png.REMOVED.git-id  32060.allfigs.00104120.png.REMOVED.git-id  compare1D-31872.2D-32060.png.REMOVED.git-id  densities2D-32060.gif.REMOVED.git-id  vel1D-31872_2D-32060.png.REMOVED.git-id
images/32067/: 32067.allfigs.00000001.png.REMOVED.git-id  compare1D-32063.2D-32067.png.REMOVED.git-id  densities1D-32063.gif.REMOVED.git-id  densities2D-32067.gif.REMOVED.git-id  vel1D-32063_2D-32067.png.REMOVED.git-id  velocities1D-32063.gif.REMOVED.git-id  velocities2D-32067.gif.REMOVED.git-id
images/32156/: 32156.allfigs.00100367.png.REMOVED.git-id  compare1D-31872.2D-32156.png.REMOVED.git-id  densities1D-31872.gif.REMOVED.git-id  densities2D-32156.gif.REMOVED.git-id  vel1D-31872_2D-32156.png.REMOVED.git-id  velocities1D-31872.gif.REMOVED.git-id  velocities2D-32156.gif.REMOVED.git-id
images/32180/: 32180.allfigs.00000001.png.REMOVED.git-id  densities1D-32063.gif.REMOVED.git-id
images/32209/: compare1D-32063.2D-32209.png.REMOVED.git-id  densities2D-32209.gif.REMOVED.git-id  velocities1D-32063.gif.REMOVED.git-id
images/32249/: 32249.allfigs.00000001.png.REMOVED.git-id  compare1D-31872.2D-32249.png.REMOVED.git-id  densities2D-32249.gif.REMOVED.git-id
images/32583/: 32583.allfigs.00190367.png.REMOVED.git-id  compare1D-31872.2D-32583.png.REMOVED.git-id  densities1D-31872.gif.REMOVED.git-id  densities2D-32583.gif.REMOVED.git-id  variables.tmp  vel1D-31872_2D-32583.png.REMOVED.git-id  velocities1D-31872.gif.REMOVED.git-id  velocities2D-32583.gif.REMOVED.git-id
images/32586/: 32586.allfigs.00001469.png.REMOVED.git-id  compare1D-32579.2D-32586.png.REMOVED.git-id  densities2D-32586.gif.REMOVED.git-id  variables.tmp  vel1D-32579_2D-32586.png.REMOVED.git-id
images/32648/: 32648.allfigs.00000367.png.REMOVED.git-id  compare1D-31872.2D-32648.png.REMOVED.git-id  (+6 more)
latex/: 3  MastersDoctoralThesis.cls  Thumbs.db  master.bib  master.tex  master_thesis.bib  preamble.bib
presentation/: beamerthemeUniGreifswald.sty  beamerthemeUniGreifswald2.sty  main.tex
results/code_solver/src/: CMakeLists.txt  main.cpp  output.cpp
results/code_solver/src/libfem/: CMakeLists.txt  Makefile  area_density.cpp  cmake_install.cmake  efield_fem.cpp  fem_debug.h  fem_solver.h  four_face_current.cpp  libfem.a.REMOVED.git-id  output_fem.cpp  seven_face_current.cpp  solver.cpp  ten_face_current.cpp
results/code_solver/src/libsolver/: CMakeLists.txt  extern_define_solver.h  solver.cpp  solver.h  solver_petsc.cpp  solver_slu.cpp  solver_sor.cpp  var_slu.h
(+157 files in other folders)
